k8s/reservation-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reservation-service
spec:
  selector:
    app: reservation-service
  ports:
    - port: 3002
      targetPort: 3002
