k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minirent-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: minirent.info
      http:
        paths:
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 3001
          - path: /reservations
            pathType: Prefix
            backend:
              service:
                name: reservation-service
                port:
                  number: 3002
